# FMAB_copy

./: .gitignore  README.md  nohup.out  pyproject.toml  tester.ipynb
conf/cv/: config.yaml  config_full.yaml
experiment_code/neural/: mab_cifar.py  mab_cifar100.py  run.sh  run_greedy.sh  run_halving.sh  run_uniform.sh  train_cifar.py
experiment_code/neural/cifar100_runners/: run_halving.sh  run_halving_2.sh  run_hyperband.sh  run_hyperband_2.sh
experiment_code/neural/draw_utils/: drawer.py  plot.sh  plot_experiments.py
experiment_code/neural/scripts/: run_greedy.sh  run_halving.sh  run_hyperband copy.sh  run_hyperband.sh  run_hyperband_100.sh  run_ucb.sh  run_uniform.sh
experiment_code/neural/train/: different_models_init.py  hyperband.py
experiment_code/synthetic/: synthetic_experiments.py
experiments/models/: mnist_models.py
experiments/train/: mab_cifar.py
experiments/utils/: funcs.py
multiobjective_opt/: function_handler.py  functions.py  online_optimizers.py  utils.py  w_generators.py
multiobjective_opt/mab/: agents.py  arms.py  environment.py  reward_estimators.py  runner.py
multiobjective_opt/neural_net/: __init__.py  mab_classes.py  runner.py
multiobjective_opt/neural_net/models/: cifar_models.py  cifar_parametrized.py  cifar_vit.py
multiobjective_opt/neural_net/train/: cifar_models_init.py  cifar_models_map.py  different_models_mab.py  mab_cifar.py  mab_cifar_new.py  mab_mnist.py  train_cifar.py  train_mnist.py
multiobjective_opt/neural_net/utils/: dataset_prepare.py  funcs.py
multiobjective_opt/synthetic_exp/: drawer.py  function_handler.py  functions.py  mab_classes.py  mabs.py  online_optimizers.py  optimizers.py  w_generators.py
multiobjective_opt/utils/: utils.py
notebooks/: cv_experiment.ipynb  cv_plot.ipynb  synth_tmp.ipynb  synthetic_exp.ipynb  tester.ipynb
