[tool.poetry]
name = "multiobjective-opt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "multiobjective_opt"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
jax = "^0.5.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
ipython = "^8.31.0"
optax = "^0.2.4"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
